--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,15 +9,16 @@
     "dev": "tsc --watch & node --watch dist/server.js"
   },
   "dependencies": {
+    "@types/winston": "^2.4.4",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "socket.io": "^4.7.2",
-    "cors": "^2.8.5"
+    "winston": "^3.18.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
     "typescript": "^5.3.3"
   }
 }
-
