--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,9 +9,11 @@
     "dev": "tsc --watch & node --watch dist/server.js"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.0",
     "@types/winston": "^2.4.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "prisma": "^6.19.0",
     "socket.io": "^4.7.2",
     "winston": "^3.18.3"
   },
