--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
-    "dev": "tsc --watch & node --watch dist/server.js"
+    "dev": "tsc --watch & node --watch dist/server.js --host 0.0.0.0"
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
