--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -112,6 +112,9 @@ jobs:
               image: ${{ env.FRONTEND_IMAGE }}:latest
           EOF
 
+      - name: Install rsync
+        run: sudo apt-get update && sudo apt-get install -y rsync
+
       - name: Copy files to server
         run: |
           rsync -avz \
