💚 step prepare folder

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -118,6 +118,14 @@ jobs:
             ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} \
             "sudo apt-get update && sudo apt-get install -y rsync || true"
 
+      - name: Prepare server directories
+        run: |
+          ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no -o BatchMode=yes -o PasswordAuthentication=no \
+            ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} \
+            "mkdir -p ${{ secrets.SERVER_PATH }}/Backend/prisma/migrations && \
+             mkdir -p ${{ secrets.SERVER_PATH }}/Backend/prisma/data && \
+             chmod -R 755 ${{ secrets.SERVER_PATH }}"
+
       - name: Copy files to server
         run: |
           rsync -avz \
